[tool.poetry]
name = "MQMitsi"
version = "0.1.0"
description = ""
authors = ["Hadley Rich <hads@nice.net.nz>"]

[tool.poetry.dependencies]
python = "^3.6"
paho-mqtt = "^1.4.0"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8-bugbear = "^19.8.0"
isort = "^4.3.21"
pre-commit = "^1.18.1"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''/(\.eggs|\.git|\.venv|build|dist|migrations)/'''

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
known_third_party = ["serial"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
